# sdk-rust

./: .clang-format  .env.example  .gitignore  .openapi-generator-ignore  Bootstrap.ps1  Bootstrap.sh  Cargo.toml  GenerateProjectFiles.bat  GenerateProjectFiles.command  GenerateProjectFiles.sh  LICENSE.txt  README.md  premake5.lua
.cargo/: config.toml
.github/workflows/: rust.yml
.openapi-generator/: FILES
Config/: Bindings.toml
Documentation/: Contributing.md
Examples/C/: Hello.c
Examples/CSharp/: Hello.cs
Examples/Cpp/: Hello.cpp
Examples/Rust/: Hello.rs
Scripts/: Copyright.py  Package.py
Source/: TribuFu.h  TribuFu.rs  lib.rs
Source/Account/: Auth.rs  Device.rs  Email.rs  Role.rs  User.rs  mod.rs
Source/Friends/: mod.rs
Source/Matchmaking/: mod.rs
Source/Messages/: mod.rs
config/: cbindgen.toml
examples/: agent.rs  api.rs  client.rs  token.rs
examples/c/: main.c  premake5.lua
examples/cpp/: main.cpp  premake5.lua
include/: tribufu.h
include/tribufu/: api.h  macros.h  native.h  platform.h  prelude.h  std.h
scripts/: cbindgen.ps1  generate.ps1  publish.ps1
scripts/unix/: premake.sh
scripts/windows/: build.ps1  premake.bat  publish.ps1
src/: api.rs  api2.rs  bot.rs  client.rs  lib.rs  oauth2.rs  server.rs  token.rs  users.rs
src/actix/: Cargo.toml  lib.rs
src/api/: Cargo.toml  lib.rs
src/apis/: configuration.rs  mod.rs  tribufu_api.rs  tribufu_generated_api.rs
src/constants/: Cargo.toml  build.rs  lib.rs
src/error/: Cargo.toml  lib.rs
src/json/: Cargo.toml  lib.rs
src/log/: Cargo.toml  colors.rs  lib.rs  log_config.rs
src/models/: account.rs  application.rs  application_type.rs  authorize_request.rs  code_challenge_method.rs  crypto_view_model.rs  game.rs  game_server.rs  game_server_cluster.rs  grant_type.rs  group.rs  group_game.rs  group_member.rs  group_rank.rs  hash_view_model.rs  introspect_request.rs  ip_address.rs  leaderboard_item.rs  leaderboard_order.rs  login_provider.rs  login_request.rs  login_response.rs  mod.rs  package.rs  profile.rs  profile_game.rs  profile_group.rs  refresh_request.rs  register_request.rs  response_type.rs  revoke_request.rs  search_request.rs  search_type.rs  server_metrics.rs  server_status.rs  subscription.rs  token_hint_type.rs  token_request.rs  token_response.rs  token_type.rs  (+3 more)
src/native/: Cargo.toml  api.rs  lib.rs  mem.rs  models.rs
src/platform/: Cargo.toml  lib.rs  paths.rs
src/types/: Cargo.toml  games.rs  lib.rs  oauth2.rs  servers.rs  users.rs
