[package]
name = "tribufu"
version = "0.1.0"
description = "Tribufu SDK"
repository = "https://github.com/Tribufu/TribufuRust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

exclude = [".github/", ".vscode/", ".editorconfig", ".gitattributes"]

[workspace]
resolver = "2"
members = ["src/*"]

[lib]
name = "tribufu"
crate-type = ["rlib"]
path = "src/lib.rs"

[features]
actix = ["tribufu-actix"]

[dependencies]
tribufu-api = { version = "0.1.0", path = "./src/api" }
tribufu-constants = { version = "0.1.0", path = "./src/constants" }
tribufu-types = { version = "0.1.0", path = "./src/types" }
#tribufu-actix = { version = "0.1.0", path = "./src/actix", optional = true }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
