[package]
name = "tribufu"
version = "0.1.0"
description = "Tribufu SDK"
repository = "https://github.com/Tribufu/TribufuRust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
publish = true

exclude = [
    ".editorconfig",
    ".gitattributes",
    ".github/",
    ".vscode/",
    "examples/",
    "scripts/",
]

[workspace]
resolver = "2"
members = ["src/*"]

[lib]
name = "tribufu"
crate-type = ["rlib"]
path = "src/lib.rs"

[features]
#actix = ["tribufu-actix"]

[dependencies]
#tribufu-actix = { version = "0.1.0", path = "./src/actix", optional = true }
alnilam-consts = { version = "0.0.4" }
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = { version = "0.4.22", features = ["serde", "rustc-serialize"] }
derive_more = "0.99.17"
mintaka-error = { version = "0.0.1" }
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4.0"
tribufu-constants = { version = "0.1.0", path = "./src/constants" }
tribufu-types = { version = "0.1.0", path = "./src/types" }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
