[package]
name = "tribufu-api"
version = "0.1.0"
description = "Tribufu API"
repository = "https://github.com/Tribufu/TribufuRust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[lib]
name = "tribufu_api"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
tribufu-constants = { version = "0.1.0", path = "../constants" }
tribufu-types = { version = "0.1.0", path = "../types" }
base64 = "0.21.5"
mintaka-error = { version = "0.0.1" }
alnilam-consts = { version = "0.0.4" }
anyhow = "1.0.75"
chrono = { version = "0.4.22", features = ["serde", "rustc-serialize"] }
derive_more = "0.99.17"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4.0"
