[package]
name = "tribufu-constants"
version = "0.1.0"
description = "Tribufu Constants"
repository = "https://github.com/Tribufu/TribufuRust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = true

[lib]
name = "tribufu_constants"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
