[package]
name = "tribufu-json"
version = "0.0.5"
description = "Tribufu Json"
repository = "https://github.com/tribufu/tribufu-rust"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "tribufu_json"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
tribufu-error = { version = "0.0.5", path = "../error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
