[package]
name = "tribufu-types"
version = "0.1.0"
description = "Tribufu Types"
repository = "https://github.com/Tribufu/TribufuRust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tribufu_types"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.22", features = ["serde", "rustc-serialize"] }
derive_more = "0.99.17"
mintaka-error = { version = "0.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4.0"
